--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ button {
   cursor: pointer;
   box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
   padding: 15px;
+  transition: background-color 0.3s ease-in;
 }
 .about__image {
   width: 500px;
@@ -70,4 +71,105 @@ button {
 }
 .about__info {
   max-width: 550px;
+}
+.form__containter {
+  height: 650px;
+  border: 1px solid #333;
+}
+.form{
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+  background-color: #1D263A;
+  color: #fff;
+  padding-top: 115px;
+  padding-bottom: 115px;
+  text-align: center;
+  border: 1px solid #333; 
+}
+.form h1{
+  width: 480px;
+  text-align: center;
+  border: 1px solid #333;
+}
+.form p{
+  width: 480px;
+  opacity: 0.65;
+  border: 1px solid #333;
+  text-align: center;
+}
+.form__group{
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+.form form{
+  display: grid;
+  grid-gap: 20px;
+  margin-top: 60px;
+}
+.form label{
+  font-size: 18px;
+  font-weight: 600px;
+}
+.form input{
+font-size: 18px;
+color: #213053;
+height: 60px;
+padding: 0px 20px 0px 20px;
+border-radius: 15px;
+border: none;
+}
+.form select{
+  font-size: 18px;
+  color: #213053;
+  height: 60px;
+  padding: 0px 20px 0px 20px;
+  border-radius: 15px;
+  border: none;
+}
+.form__submit{
+  font-size: 18px;
+  font-weight: 600px;
+  margin-top: 40px;
+}
+select {
+  appearance: none;
+  outline: none;
+}
+input {
+  outline: none;
+}
+button:hover {
+  background-color: #f6980c;
+  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+}
+footer{
+  padding: 90px 20px;
+  font-size: 16px;
+  font-weight: 600px;
+}
+.footer__container{
+  display: flex;
+  justify-content: center;
+}
+.footer__copyright{
+  margin-top: 40px;
+  text-align: center;
+  opacity: 0.5;
+}
+.footer__group{
+padding-right: 80px;
+}
+.footer__group h3{
+  font-size: 16px;
+  opacity: 0.7;
+  margin-bottom: 30px;
+}
+.footer__links{
+  display: flex;
+  flex-direction: column;
+}
+.footer__links a{
+margin-bottom: 15px;
 }
